Fixed disabled form elements not being visible as disabled

--- a/skin/adminhtml/default/flatorange/form.css
+++ b/skin/adminhtml/default/flatorange/form.css
@@ -16,6 +16,15 @@ input {
     vertical-align: middle;
 }
 
+input[type=text].disabled,
+input[type=text]:disabled,
+textarea:disabled,
+textarea.disabled,
+select.disabled,
+select:disabled {
+    background: #f6f6f6;
+}
+
 .form-list td.label label {
     padding: 5px 15px 0 0;
 }
